provision/k8s/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thanglab-APP_NAME
  #namespace: default
  labels:
    app: thanglab-APP_NAME
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: thanglab-APP_NAME
  template:
    metadata:
      labels:
        app: thanglab-APP_NAME
        date: "_DATE_"
    spec:
      #imagePullSecrets:
      #- name: regcred
      terminationGracePeriodSeconds: 180
      restartPolicy: Always
      containers:
      - name: thanglab-APP_NAME
        image: letanthang/hello-world
        ports:
        - containerPort: 9090
        imagePullPolicy: Always
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "60Mi"
            cpu: "70m"
# ---
# apiVersion: autoscaling/v2beta1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: thanglab-APP_NAME
# spec:
#   scaleTargetRef:
#     apiVersion: extensions/v1beta1
#     kind: Deployment
#     name: thanglab-APP_NAME
#   minReplicas: 1
#   maxReplicas: 3
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       targetAverageUtilization: 80
#   - type: Resource
#     resource:
#       name: memory
#       targetAverageValue: 512Mi
---
kind: Service
apiVersion: v1
metadata:
  name: thanglab-APP_NAME
  #namespace: station
spec:
  selector:
    app: thanglab-APP_NAME
  type: NodePort # NodePort|LoadBalancer Test kong ingress
  ports:
  ####### Kong Ingress
  - port: 8080
    targetPort: 9090
    protocol: TCP
    name: thanglab-APP_NAME
---
# Kong Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thanglab-APP_NAME
  #namespace:  dummy
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: fine-iterator-231706.appspot.com
      http:
        paths:
          - path: "/api/v1/public/hello"
            backend:
              serviceName: thanglab-APP_NAME
              servicePort: thanglab-APP_NAME
